--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -18,11 +18,9 @@ jobs:
       - name: Checkout GutHub actions
         uses: actions/checkout@v2
 
-      - name: Install deps
-        run: npm install
+      - run: npm install
 
-      - name: Build
-        run: npm run build
+      - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
