--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,8 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout GutHub actions
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - run: npm install
 
