changed the working directory in the workflow

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - "Package/Container/**"
+      - "Container/Package/**"
 defaults:
   run:
-    working-directory: Package/Container
+    working-directory: Container/Package
 
 jobs:
   build:
