--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,7 +13,9 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
+      - uses: 'node16'
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
